Fix to alignment

--- a/react-vite/src/components/SignupFormPage/SignupFormPage.css
+++ b/react-vite/src/components/SignupFormPage/SignupFormPage.css
@@ -8,7 +8,7 @@
   margin-bottom: 50px;
 }
 
-.signup-form > h1 {
+.signup-form>h1 {
   font-size: 42px;
   font-family: "Larsseit", Helvetica Neue, Helvetica, Segoe UI, Tahoma, Arial,
     sans-serif;
@@ -17,12 +17,12 @@
   margin: auto;
 }
 
-.signup-form > label {
+.signup-form>label {
   width: 100%;
   box-sizing: border-box;
 }
 
-.signup-form > label > input {
+.signup-form>label>input {
   width: 100%;
   box-sizing: border-box;
   height: 44px;
@@ -35,19 +35,24 @@
   font-weight: 400;
 }
 
-.signup-form > label > textarea {
+.signup-form>label>textarea {
   width: 100%;
   box-sizing: border-box;
   height: 100px;
   border-radius: 5px;
   border: 1px solid #bbbabb;
   margin-top: 8px;
-  padding-left: 12px;
+  padding: 12px;
+  min-height: 48px;
   font-size: 18px;
   font-family: Lato, Slack-Fractions, appleLogo, sans-serif;
   font-weight: 400;
 }
 
-.signup-form > button {
+.signup-form>button {
+  margin-top: 10px;
+}
+
+.signup-file-upload-wrapper {
   margin-top: 10px;
 }
